tests/ui/opts/16_unknown_param_ident.stderr
error: unknown generic parameter
 --> tests/ui/opts/16_unknown_param_ident.rs:4:18
  |
4 | #[funcmap(params(S))]
  |                  ^
