tests/ui/opts/16_unknown_param_ident.rs
use funcmap::FuncMap;

#[derive(FuncMap)]
#[funcmap(params(S))]
struct Test<T>(T);

fn main() {}
